# wineapp

./: .gitignore  README.md  docker-compose.yaml
api_wine/: Dockerfile  README.md  pyproject.toml
api_wine/api_wine/: api.py  data_models.py  settings.py
mlflow_wine/: Dockerfile  README.md
mlflow_wine/mlflow-data/: mlflow.db
mlflow_wine/mlflow-data/mlartifacts/0/0acd1ae7a6354144abb0a299446aaf11/artifacts/: estimator.html
mlflow_wine/mlflow-data/mlartifacts/0/0acd1ae7a6354144abb0a299446aaf11/artifacts/model/: conda.yaml  model.pkl
mlflow_wine/mlflow-data/mlartifacts/0/0acd1ae7a6354144abb0a299446aaf11/artifacts/model/metadata/: MLmodel
mlflow_wine/mlflow-data/mlartifacts/0/8a62189256cd42c389497a18da49a314/artifacts/model/: MLmodel  model.pkl
scripts/: README.md  fill_db.py  get_wine_json.py  pyproject.toml  test.json  test_api.py  test_model.py  train_model.py
