[tool.poetry]
name = "wineapp-scripts"
version = "0.1.0"
description = ""
authors = ["Tristan Muscat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.4.2"
mlflow = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
